Fixed some Python code style issues throughout the various lessons.

--- a/Jupyter Notebooks/Bridge 2.ipynb
+++ b/Jupyter Notebooks/Bridge 2.ipynb
@@ -372,22 +372,22 @@
     }
    ],
    "source": [
-    "def forwardMarch(number_times):\n",
+    "def forward_march(number_times):\n",
     "    index: int = 0\n",
     "    while index < number_times:\n",
     "        print(\"Step!\")\n",
     "        index = index + 1\n",
     "\n",
-    "forwardMarch(3)\n",
+    "forward_march(3)\n",
     "print(\"-----\")\n",
-    "forwardMarch(3.0)"
+    "forward_march(3.0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function is simple. Based on the input, the function prints a statement the same number of times as the input. If we changed the input, the number of times the program would print would change. Notice that we used a comparison operator between numbers in the condition for the *while* statement. In other words, whenever the *while* statement was reached, the program evaluated whether the value *index* was *less than* (<) the  value *number_times*. If this was True, the loop persisted; otherwise, it concluded. Note further that we could compare values of different types; in the two calls of *forwardMarch*, the first item is an integer and the other is a float. Yet, both were valid comparison items with an integer. For all numerical values in Python barring complex numbers, comparison is possible and valid. Despite the different types, Python has defined comparison between these two values innately for us. Thus, we do not have to worry about type inconsistencies as with addition between an integer and a string--Python knows what it is doing.\n",
+    "This function is simple. Based on the input, the function prints a statement the same number of times as the input. If we changed the input, the number of times the program would print would change. Notice that we used a comparison operator between numbers in the condition for the *while* statement. In other words, whenever the *while* statement was reached, the program evaluated whether the value *index* was *less than* (<) the  value *number_times*. If this was True, the loop persisted; otherwise, it concluded. Note further that we could compare values of different types; in the two calls of *forward_march*, the first item is an integer and the other is a float. Yet, both were valid comparison items with an integer. For all numerical values in Python barring complex numbers, comparison is possible and valid. Despite the different types, Python has defined comparison between these two values innately for us. Thus, we do not have to worry about type inconsistencies as with addition between an integer and a string--Python knows what it is doing.\n",
     "\n",
     "As different mathematical expressions can amount fo the same thing, so too could our function above in its use of operators. For example, we could instead say the following with the less-than-or-equal-to (<=) operator:"
    ]
@@ -412,15 +412,15 @@
     }
    ],
    "source": [
-    "def forwardMarch(number_times):\n",
+    "def forward_march(number_times):\n",
     "    index: int = 1\n",
     "    while index <= number_times:\n",
     "        print(\"Step!\")\n",
     "        index = index + 1\n",
     "\n",
-    "forwardMarch(3)\n",
+    "forward_march(3)\n",
     "print(\"-----\")\n",
-    "forwardMarch(3.0)"
+    "forward_march(3.0)"
    ]
   },
   {
@@ -450,14 +450,14 @@
     }
    ],
    "source": [
-    "def forwardMarch(number_times):\n",
+    "def forward_march(number_times):\n",
     "    while number_times >= 1:\n",
     "        print(\"Step!\")\n",
     "        number_times = number_times - 1\n",
     "\n",
-    "forwardMarch(3)\n",
+    "forward_march(3)\n",
     "print(\"-----\")\n",
-    "forwardMarch(3.0)"
+    "forward_march(3.0)"
    ]
   },
   {
@@ -487,21 +487,21 @@
     }
    ],
    "source": [
-    "def forwardMarch(number_times):\n",
+    "def forward_march(number_times):\n",
     "    while number_times > 0:\n",
     "        print(\"Step!\")\n",
     "        number_times = number_times - 1\n",
     "\n",
-    "forwardMarch(3)\n",
+    "forward_march(3)\n",
     "print(\"-----\")\n",
-    "forwardMarch(3.0)"
+    "forward_march(3.0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can choose whichever way makes us more comfortable or suits the situation. However, note that the latter two examples with *forwardMarch* altered the argument, changing it over time. If we wanted to use that argument as is in the function somehow, we would have to find a way to hold onto the argument in its initial form. That way is shown below:"
+    "We can choose whichever way makes us more comfortable or suits the situation. However, note that the latter two examples with *forward_march* altered the argument, changing it over time. If we wanted to use that argument as is in the function somehow, we would have to find a way to hold onto the argument in its initial form. That way is shown below:"
    ]
   },
   {
@@ -526,16 +526,16 @@
     }
    ],
    "source": [
-    "def forwardMarch(number_times):\n",
+    "def forward_march(number_times):\n",
     "    times = number_times\n",
     "    while number_times > 0:\n",
     "        print(\"Step!\")\n",
     "        number_times = number_times - 1 \n",
     "    print(times)\n",
     "\n",
-    "forwardMarch(3)\n",
+    "forward_march(3)\n",
     "print(\"-----\")\n",
-    "forwardMarch(3.0)"
+    "forward_march(3.0)"
    ]
   },
   {
@@ -544,7 +544,7 @@
    "source": [
     "As we can see, the initial argument was saved. We could have used *times* in the loop instead of *number_times* if we had wanted; either would suffice. \n",
     "\n",
-    "Before we proceed away from this \"solution\" to holding onto the argument with the greater-than or greater-than-or-equal-to operators, one note should be made. The assignment of number_times to times *does* make a separate copy of the value that the argument labels in this instance, but it does not always. All primitive type values should copy over; however, in the future, this solution is not guaranteed to work as is. More often than not, you will likely prefer the *index* solution given in the first two *forwardMarch* examples.\n",
+    "Before we proceed away from this \"solution\" to holding onto the argument with the greater-than or greater-than-or-equal-to operators, one note should be made. The assignment of number_times to times *does* make a separate copy of the value that the argument labels in this instance, but it does not always. All primitive type values should copy over; however, in the future, this solution is not guaranteed to work as is. More often than not, you will likely prefer the *index* solution given in the first two *forward_march* examples.\n",
     "\n",
     "Thus far, we've seen four comparison operators: greater-than (>), less-than (<), greater-than-or-equal-to (>=), and less-than-or-equal-to (<=). Two more remain--equal-to (==) and not-equal-to (!=). These are simple and act as one would expect for numbers. The former returns True when the two values are equal; otherwise, it returns False. The latter does just the opposite. For example:"
    ]
@@ -623,7 +623,7 @@
     }
    ],
    "source": [
-    "def forwardMarch(number_times):\n",
+    "def forward_march(number_times):\n",
     "    index: int = 1\n",
     "    while index <= number_times:\n",
     "        if index != number_times:\n",
@@ -632,9 +632,9 @@
     "            print(\"Ten-hut!\")\n",
     "        index = index + 1\n",
     "\n",
-    "forwardMarch(3)\n",
+    "forward_march(3)\n",
     "print(\"-----\")\n",
-    "forwardMarch(3.0)"
+    "forward_march(3.0)"
    ]
   },
   {
@@ -664,7 +664,7 @@
     }
    ],
    "source": [
-    "def forwardMarch(number_times):\n",
+    "def forward_march(number_times):\n",
     "    index: int = 1\n",
     "    while index <= number_times:\n",
     "        if index == number_times:\n",
@@ -673,9 +673,9 @@
     "            print(\"Step!\")\n",
     "        index = index + 1\n",
     "\n",
-    "forwardMarch(3)\n",
+    "forward_march(3)\n",
     "print(\"-----\")\n",
-    "forwardMarch(3.0)"
+    "forward_march(3.0)"
    ]
   },
   {
@@ -839,13 +839,13 @@
     "def has_word_in_sentence(word, sentence):\n",
     "    sentence = sentence.replace(' ', '')\n",
     "    sentence_copy = circular_shift(sentence)\n",
-    "    wordInSentenceBool: bool = False\n",
+    "    word_in_sentence_bool: bool = False\n",
     "    # the parentheses here help determine the order of evaluation, as before\n",
     "    while (sentence_copy != sentence) and (word not in sentence_copy):\n",
     "        sentence_copy = circular_shift(sentence_copy)\n",
     "        if word in sentence_copy:\n",
-    "            wordInSentenceBool = True\n",
-    "    return wordInSentenceBool\n",
+    "            word_in_sentence_bool = True\n",
+    "    return word_in_sentence_bool\n",
     "\n",
     "def circular_shift(string):\n",
     "    if not is_empty(string):\n",
@@ -855,11 +855,11 @@
     "    return string\n",
     "\n",
     "def is_empty(string):\n",
-    "    emptyBool: bool = True\n",
+    "    empty_bool: bool = True\n",
     "    # certain items are \"truthy\" or  \"falsy\" in Python; an empty string is \"falsy,\" which is why the below works.\n",
     "    if string:\n",
-    "        emptyBool = False\n",
-    "    return emptyBool\n",
+    "        empty_bool = False\n",
+    "    return empty_bool\n",
     "\n",
     "print(has_word_in_sentence('onto', 'today is on'))\n",
     "print(has_word_in_sentence('red', 'education is dear'))\n",
@@ -972,6 +972,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.0"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
