--- a/Jupyter Notebooks/Lecture 1.ipynb
+++ b/Jupyter Notebooks/Lecture 1.ipynb
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def personalizedGreeting():\n",
+    "def personalized_greeting():\n",
     "    print(\"Hello! What is your name?\")\n",
     "    given_name: str = input(\">> \")\n",
     "    print(\"Hello, \" + given_name + \"!\")"
@@ -532,6 +532,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.0"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
