--- a/Jupyter Notebooks/Lecture 2.ipynb
+++ b/Jupyter Notebooks/Lecture 2.ipynb
@@ -92,12 +92,12 @@
     }
    ],
    "source": [
-    "def doAThing(thing):\n",
+    "def do_a_thing(thing):\n",
     "    return thing.strip().upper()\n",
     "\n",
     "# Variables outside the function are below:\n",
     "my_string: str = \"  ha!  \"\n",
-    "my_new_string: str = doAThing(my_string)\n",
+    "my_new_string: str = do_a_thing(my_string)\n",
     "\n",
     "print(my_new_string)"
    ]
@@ -106,9 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above, we define a function called *doAThing* that takes the parameter *thing*. In this function, we use dot notation to call .strip() and .upper() subsequently on the item *thing* once it is supplied. That is, *thing*.strip() evaluates first. Then, (*thing*.strip()).upper() is done. As we can see--and as we will commonly see--order matters! After the function definition, we have a comment that Python does not read. It is simply for our notes. The same can be said of the type annotation on the two variables. A value is labeled with my_string. Then, in the next line, the right-hand side (RHS) is evaluated first. my_string is passed as an argument to doAThing and is used as “thing” inside of the method. Then, “thing” is evaluated on the one line of the method and is returned. Finally, my_new_string is passed as an argument to the print() method and the phrase “LOL!” appears on the console.\n",
+    "In the above, we define a function called *do_a_thing* that takes the parameter *thing*. In this function, we use dot notation to call .strip() and .upper() subsequently on the item *thing* once it is supplied. That is, *thing*.strip() evaluates first. Then, (*thing*.strip()).upper() is done. As we can see--and as we will commonly see--order matters! After the function definition, we have a comment that Python does not read. It is simply for our notes. The same can be said of the type annotation on the two variables. A value is labeled with my_string. Then, in the next line, the right-hand side (RHS) is evaluated first. my_string is passed as an argument to do_a_thing and is used as “thing” inside of the method. Then, “thing” is evaluated on the one line of the method and is returned. Finally, my_new_string is passed as an argument to the print() method and the phrase “LOL!” appears on the console.\n",
     "\n",
-    "We’ve seen all this, but here’s one question: what would have happened if I had passed an integer to the function doAThing()? Would it have worked? The answer is no, because the writer of this method did not account for that--it implicitly assumes that the methods .strip() and .upper() are supported. In this case, the only type that we know of that fits that bill is a string, so giving an integer argument to the method would cause it to fail.\n",
+    "We’ve seen all this, but here’s one question: what would have happened if I had passed an integer to the function do_a_thing()? Would it have worked? The answer is no, because the writer of this method did not account for that--it implicitly assumes that the methods .strip() and .upper() are supported. In this case, the only type that we know of that fits that bill is a string, so giving an integer argument to the method would cause it to fail.\n",
     "\n",
     "With that said, that is the end of our review of last time."
    ]
@@ -199,9 +199,9 @@
    },
    "outputs": [],
    "source": [
-    "if(expression_is_true):\n",
+    "if expression_is_true:\n",
     "    do_this()\n",
-    "elif(other_expression_is_true):\n",
+    "elif other_expression_is_true:\n",
     "    do_this_instead()\n",
     "else:\n",
     "    do_this_if_all_else_fails()"
@@ -232,9 +232,9 @@
    "source": [
     "my_first_condition: bool = True\n",
     "my_second_condition: bool = True\n",
-    "if(my_first_condition):\n",
+    "if my_first_condition:\n",
     "    print(\"First option!\")\n",
-    "elif(my_second_condition):\n",
+    "elif my_second_condition:\n",
     "    print(\"Second option!\")\n",
     "else:\n",
     "    print(\"My last option!\")"
@@ -269,9 +269,9 @@
    "source": [
     "my_first_condition: bool = False\n",
     "my_second_condition: bool = True\n",
-    "if(my_first_condition):\n",
+    "if my_first_condition:\n",
     "    print(\"First option!\")\n",
-    "elif(my_second_condition):\n",
+    "elif my_second_condition:\n",
     "    print(\"Second option!\")\n",
     "else:\n",
     "    print(\"My last option!\")"
@@ -304,9 +304,9 @@
    "source": [
     "my_first_condition: bool = False\n",
     "my_second_condition: bool = False\n",
-    "if(my_first_condition):\n",
+    "if my_first_condition:\n",
     "    print(\"First option!\")\n",
-    "elif(my_second_condition):\n",
+    "elif my_second_condition:\n",
     "    print(\"Second option!\")\n",
     "else:\n",
     "    print(\"My last option!\")"
@@ -350,9 +350,9 @@
     "def selection_example(first, second):\n",
     "    my_first_condition: bool = first\n",
     "    my_second_condition: bool = second\n",
-    "    if(my_first_condition):\n",
+    "    if my_first_condition:\n",
     "        print(\"First option!\")\n",
-    "    elif(my_second_condition):\n",
+    "    elif my_second_condition:\n",
     "        print(\"Second option!\")\n",
     "    else:\n",
     "        print(\"My last option!\")\n",
@@ -413,31 +413,31 @@
    },
    "outputs": [],
    "source": [
-    "if(condition):\n",
+    "if condition:\n",
     "    action()\n",
     "\n",
-    "if(condition):\n",
+    "if condition:\n",
     "    action()\n",
     "else:\n",
     "    other_action()\n",
     "\n",
-    "if(condition):\n",
+    "if condition:\n",
     "    action()\n",
-    "elif(condition_2):\n",
+    "elif condition_2:\n",
     "    other_action()\n",
     "\n",
-    "if(condition):\n",
+    "if condition:\n",
     "    action()\n",
-    "elif(condition_2):\n",
+    "elif condition_2:\n",
     "    other_action()\n",
-    "elif(condition_3):\n",
+    "elif condition_3:\n",
     "    other_other_action()\n",
     "\n",
-    "if(condition):\n",
+    "if condition:\n",
     "    action()\n",
-    "elif(condition_2):\n",
+    "elif condition_2:\n",
     "    other_action()\n",
-    "elif(condition_3):\n",
+    "elif condition_3:\n",
     "    other_other_action()\n",
     "else:\n",
     "    other_other_other_action()"
@@ -487,21 +487,21 @@
     }
    ],
    "source": [
-    "def whenTen(number):\n",
-    "    if(number == 10):\n",
+    "def when_ten(number):\n",
+    "    if number == 10:\n",
     "        print(\"We’re done!\")\n",
-    "    elif(number < 10):\n",
+    "    elif number < 10:\n",
     "        print(\"We’re too low!\")\n",
     "        number = number + 1\n",
     "    else:\n",
     "        print(\"We’re too high!\")\n",
     "        number = number - 1\n",
     "\n",
-    "whenTen(10)\n",
+    "when_ten(10)\n",
     "print(\"-----\")\n",
-    "whenTen(9)\n",
+    "when_ten(9)\n",
     "print(\"-----\")\n",
-    "whenTen(17)"
+    "when_ten(17)"
    ]
   },
   {
@@ -510,7 +510,7 @@
     "hidePrompt": true
    },
    "source": [
-    "Our function, whenTen(), takes an integer as an argument and is intended to make whatever number that goes into it become 10. It then prints that it has made the number 10 to the console. Otherwise, it prints that the number given as a parameter is too high or too low. But it doesn’t and *can’t* work as it is for all integers. If the number is less than 10 or greater than 10, even if we later number inside the conditions as shown above, we can’t get to 10 and cue the first condition because we can’t loop over the conditions over and over. Certainly, whenTen(10) will succeed, but the other two items will fail--they can’t get back to that first *if*. \n",
+    "Our function, when_ten(), takes an integer as an argument and is intended to make whatever number that goes into it become 10. It then prints that it has made the number 10 to the console. Otherwise, it prints that the number given as a parameter is too high or too low. But it doesn’t and *can’t* work as it is for all integers. If the number is less than 10 or greater than 10, even if we later number inside the conditions as shown above, we can’t get to 10 and cue the first condition because we can’t loop over the conditions over and over. Certainly, when_ten(10) will succeed, but the other two items will fail--they can’t get back to that first *if*. \n",
     "\n",
     "Now, we could do this:"
    ]
@@ -537,15 +537,15 @@
     }
    ],
    "source": [
-    "def whenTen(number):\n",
-    "    if(number == 10):\n",
+    "def when_ten(number):\n",
+    "    if number == 10:\n",
     "        print(\"We’re done!\")\n",
-    "    elif(number < 10):\n",
+    "    elif number < 10:\n",
     "        print(\"We’re too low!\")\n",
     "        number = number + 1\n",
-    "        if(number == 10):\n",
+    "        if number == 10:\n",
     "            print(\"We’re done!\")\n",
-    "        elif(number < 10):\n",
+    "        elif number < 10:\n",
     "            print(\"We’re too low!\")\n",
     "            number = number + 1\n",
     "        else:\n",
@@ -554,27 +554,27 @@
     "    else:\n",
     "        print(\"We’re too high!\")\n",
     "        number = number - 1\n",
-    "        if(number == 10):\n",
+    "        if number == 10:\n",
     "            print(\"We’re done!\")\n",
-    "        elif(number < 10):\n",
+    "        elif number < 10:\n",
     "            print(\"We’re too low!\")\n",
     "            number = number + 1\n",
     "        else:\n",
     "            print(\"We’re too high!\")\n",
     "            number = number - 1\n",
     "\n",
-    "whenTen(10)\n",
+    "when_ten(10)\n",
     "print(\"-----\")\n",
-    "whenTen(9)\n",
+    "when_ten(9)\n",
     "print(\"-----\")\n",
-    "whenTen(17)"
+    "when_ten(17)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "… but this code is unnecessarily long and repetitive; furthermore, it only works for one two iterations. whenTen(9) would now work as intended, but whenTen(17) would still fail. We don’t want to keep repeating the same code over and over and over; thus, we use the technique of **iteration** instead. "
+    "… but this code is unnecessarily long and repetitive; furthermore, it only works for one two iterations. when_ten(9) would now work as intended, but when_ten(17) would still fail. We don’t want to keep repeating the same code over and over and over; thus, we use the technique of **iteration** instead. "
    ]
   },
   {
@@ -609,7 +609,7 @@
    },
    "outputs": [],
    "source": [
-    "while (condition):\n",
+    "while condition:\n",
     "    action()"
    ]
   },
@@ -654,9 +654,9 @@
     }
    ],
    "source": [
-    "def whenTen(number):\n",
-    "    while(number != 10):\n",
-    "        if (number < 10):\n",
+    "def when_ten(number):\n",
+    "    while number != 10:\n",
+    "        if number < 10:\n",
     "            print(\"We’re too low!\")\n",
     "            number = number + 1\n",
     "        else:\n",
@@ -666,7 +666,7 @@
     "    print(\"We're done!\")\n",
     "\n",
     "# Ignore the below code:\n",
-    "interact(whenTen, number=widgets.IntSlider(min=-10,max=30,step=1,value=10, continuous_update=False))\n",
+    "interact(when_ten, number=widgets.IntSlider(min=-10,max=30,step=1,value=10, continuous_update=False))\n",
     "\n",
     "# Use the below to interact with the program (and ignore the Out value):"
    ]
@@ -675,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A *while* loop works as follows. When the code, in its process, hits the *while* statement, it evaluates the *condition* given in parentheses. When the number is not equal to 10, the program performs the actions inside the loop. It repeatedly checks the selection over and over, adding or subtracting when relevant, until number equals 10. Once this is the case and the program returns to the *while* statement to evaluate the condition, the loop ends and actions after the loop are performed. In other words, as it uses the loop, the program will eventually set number to 10. However, it will not end right when that happens. Rather, the print statement at the bottom of the loop will be triggered. Then, the loop will return to the top and checks whether a new iteration should be started. Since 10 *is* equal to 10, the condition is false and the loop concludes. Then, the actions outside the loop are performed--that is, in this case, the final print statement."
+    "A *while* loop works as follows. When the code, in its process, hits the *while* statement, it evaluates the *condition* given after the *if* keyword and before the colon. When the number is not equal to 10, the program performs the actions inside the loop. It repeatedly checks the selection over and over, adding or subtracting when relevant, until number equals 10. Once this is the case and the program returns to the *while* statement to evaluate the condition, the loop ends and actions after the loop are performed. In other words, as it uses the loop, the program will eventually set number to 10. However, it will not end right when that happens. Rather, the print statement at the bottom of the loop will be triggered. Then, the loop will return to the top and checks whether a new iteration should be started. Since 10 *is* equal to 10, the condition is false and the loop concludes. Then, the actions outside the loop are performed--that is, in this case, the final print statement."
    ]
   },
   {
@@ -727,7 +727,7 @@
     "        3. Set it up so that *loop_condition* changes to false when a valid input has been given--that is, when *poll_response* equals one of the answers. \n",
     "    6. This is the last step! You’ve got a poll for one person going; however, what if you wanted multiple users to poll in? Let’s simulate that.\n",
     "        1. Add a new parameter called *num_pollers*. Similarly, remove your use of the *loop_condition*, as you are replacing it with a Boolean expression--an expression that evaluates to True or False.\n",
-    "        2. Set your while condition to scheck that *num_pollers* is greater than zero. The greater than sign is what you’d expect: “>”.\n",
+    "        2. Set your while condition to check that *num_pollers* is greater than zero. The greater than sign is what you’d expect: “>”.\n",
     "        3. The behavior you want is to have the program move on to the next “poller” when the current “poller” has given a valid response. How do you think that you could implement this with your given condition? Hint: you’ll have to think similarly to how you did the *loop_condition* before in Part 3 of the previous step.\n",
     "        4. As a final test, run the following code:\n",
     "            1. poll(\"How many errors did you get while writing this code?\", \"None\", \"Few\", \"Many\", \"Too Many\", 5)\n",
@@ -741,7 +741,7 @@
     "        5. Create an ‘options’ input that has its own selection inside of it and waits for input on those options; similarly to the Main Menu, print for each iteration that the user is on this menu. Note that these options do not have to do anything; merely having a print statement to say that something is done suffices.\n",
     "        6. Create some string keyword input that alters the Main Menu in some way; it could change the text, for example. Make it so that the Main Menu can be returned to its original state through the same process.\n",
     "            1. Feel free to make use of the string functions you saw in Lecture 1 for this step.\n",
-    "4. Challenge: For whenTen(), I showed that a *while* loop could be used to solve its problem. Given the requirements (and read them carefully), however, there are two other ways in which whenTen() could be written without a *while* loop or other forms of iteration. I don’t expect you to get one of them, as it involves a concept you haven’t learned (although, you’ve learned all the necessary syntax to write it); however, the other simply involves a logical trick. See if you can do it!"
+    "4. Challenge: For when_ten(), I showed that a *while* loop could be used to solve its problem. Given the requirements (and read them carefully), however, there are two other ways in which when_ten() could be written without a *while* loop or other forms of iteration. I don’t expect you to get one of them, as it involves a concept you haven’t learned (although, you’ve learned all the necessary syntax to write it); however, the other simply involves a logical trick. See if you can do it!"
    ]
   }
  ],
