--- a/Jupyter Notebooks/Project 1.ipynb
+++ b/Jupyter Notebooks/Project 1.ipynb
@@ -68,9 +68,9 @@
     "# This function returns True if string is both lowercase and consists only of alphabetical characters.\n",
     "# Otherwise, it returns false.\n",
     "def my_accessor_function(string):\n",
-    "    return (string.islower() and string.isalpha())\n",
+    "    return string.islower() and string.isalpha()\n",
     "\n",
-    "# This is the function in my code that I wnat to perform the main tasks of my program.\n",
+    "# This is the function in my code that I want to perform the main tasks of my program.\n",
     "def my_main_function():\n",
     "    user_input = input(\">> \")\n",
     "    if my_accessor_function(user_input):\n",
@@ -241,6 +241,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.0"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
